dev/non_executable_reasons_record_from_random_10k/3277.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%javascript
//This is a Javascript code block that disables auto-scrolling.
IPython.OutputArea.prototype._should_scroll = function(lines) {
    return false;
}
------------------

[0;36m  File [0;32m"<ipython-input-1-131767b8455f>"[0;36m, line [0;32m4[0m
[0;31m    //This is a Javascript code block that disables auto-scrolling.[0m
[0m     ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-131767b8455f>, line 4)

Executability                            : False
